style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@media (prefers-color-scheme: dark) {

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
}

body{
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background: radial-gradient(circle at 70% 50%, rgba(70,70,70,1), rgba(15,15,15,1));
}

.digital-clock{
    position: relative;
    color: white;
    min-height: 100vh;
    width: 100%;
    padding: 0;
    border-radius: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url(noise_dark.svg);
}

.time{
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hours, .dots, .minutes{
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: 500;
    padding: 0 10px;
    line-height: 125px;
}

.hours, .minutes{
    font-size: 6.5em;
    width: 125px;
}

.dots{
    font-size: 5em;
    color: #929292;
}

}

@media (prefers-color-scheme: light) {

    *{
        margin: 0;
        padding: 0;
        box-sizing: border-box;
        font-family: 'Montserrat', sans-serif;
    }
    
    body{
        min-height: 100vh;
        display: flex;
        justify-content: center;
        align-items: center;
        background: linear-gradient(203deg, #57e6c1, #576de6, #e657da, #f9a543);
        background-size: 800% 800%;
        animation: AnimationName 45s ease infinite;
    }

    @keyframes AnimationName {
        0%{background-position:73% 0%}
        50%{background-position:28% 100%}
        100%{background-position:73% 0%}
    }
    
    .digital-clock{
        position: relative;
        color: white;
        min-height: 100vh;
        width: 100%;
        padding: 0;
        border-radius: 0;
        display: flex;
        justify-content: center;
        align-items: center;
        background-image: url(noise_light.svg);
    }
    
    .time{
        position: relative;
        display: flex;
        justify-content: center;
        align-items: center;
    }
    
    .hours, .dots, .minutes{
        display: flex;
        justify-content: center;
        align-items: center;
        font-weight: 500;
        padding: 0 10px;
        line-height: 125px;
    }
    
    .hours, .minutes{
        font-size: 6.5em;
        width: 125px;
    }
    
    .dots{
        font-size: 5em;
        color: white;
    }
    
}

